February 26, 2017:

* Added signed installer.
* Added assembly icon.
* Added ability to copy coefficient string to clipboard to paste into desired mud client (Ex: 57;w;21;r;21;t;0;m;=)